# check-if-email-exists

./: .dockerignore  .editorconfig  .env  .env.example  .envrc  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.worker  LICENSE  LICENSE.COMMERCIAL  LICENSE.md  Makefile  Procfile  README.md  app.json  appveyor.yml  checkEmail.sh  docker-compose.local.yaml  docker-compose.yaml  docker-compose.yml  docker.sh  expectTelnet.sh  expectTelnet.tcl  fly.toml  nginx.conf  package.json  serverless.yml
.github/: FUNDING.yml  dependabot.yml
.sqlx/: query-030e82770e9458ee745aa647eba42da57167a810dd708d991e3dfdff32217273.json  query-068521cf9e77f563b3791cce500d95660c56e852770a4eac47576089e704322a.json  query-0968b040845ecce236576f65df3d3648f7ce03bc5ae0ebe9f36f878c309061c8.json  query-1039a6d3d732a86b9b3b2e19e6c8e3c857125d1c4cf916ac32789bfd0176b6b5.json  query-13862fe23ea729215fb1cfee3aadc14dfa9373dc8137c4f1da199e3ae66efd50.json  query-1a6b5a9eec4836bb19a7f35bcfce7b35b6207855565f49416e7c22a4b66509b4.json  query-1a964da4784832e5f631f2c2e727382532c86c7e66e46254d72ef0af03021975.json  query-1e5a713008953f95d626e578ed0f2bc2cfc2b1599d8c5d09d11287a661fccd0e.json  query-323970c6cb4f5d4b7c0cb3293d1e6fd146c7d682e28e6cb72de6bbe14a3e04b7.json  query-47af0157fa867e147e49d80b121b1881df93a6619434a1fd1fc9a58315b4044b.json  query-594dfc319a34dfdcf316758798a9ad099c298480b4f1dabc69b1dc6e2f4687a0.json  query-8fd88dc18c8ed6c7d417d8d7bf9497f8657a9d9aa16461ff7fbf6f9bc3e7462d.json  query-96a32768eb750971bad4df10560b0331bf52b44dbd59020369adbbc6bc8dc830.json  query-981f650b6c663feeae8a93e7ecf86326e7a5e6d5c8fd03c03565d86982d0381a.json  query-a1f7a67d3708b8cf74361c33bfdd1dcbe9938a78b6c4ff550336ee4d16eb3ff3.json  query-aaa1cf5961de24b1fb68f856205afe4d3bfaf55e3371f46a472ea3d5705d35b2.json  query-ac5e197ca20a1393e4ea45248d5e702c0edbbf57624f2bb416f0fd0401a44dcf.json  query-b1c8e9e8bf206ed1fb1a4b018f8980e61ab2213e45b7b0fc08a9441eba1038b9.json  query-d43b1d40f4afa59558bcaf1fad339cf8c7dbe93ea8dee93de054ce661793401e.json  query-d682d43a07f3969bcb3113ae3600766e9197d48bdc7ccb73a53c938cb45f910f.json  query-d8aca3c742d25e4bd5b4cdcf4f86ffb9782f42f3ca8df4c4547fb97d74ca5100.json  (+4 more)
.well-known/: funding-manifest-urls
backend/: .env  .env.example  Cargo.toml  Dockerfile  README.md  SETUP.md  backend_config.toml  docker.sh  openapi.json  sqlx-data.json
backend/docs/: BULK_SPEC.md
backend/migrations/: 20210316025847_setup.down.sql  20210316025847_setup.up.sql  20210921115907_clear.down.sql  20210921115907_clear.up.sql  20211013151757_fix_mq_latest_message.down.sql  20211013151757_fix_mq_latest_message.up.sql  20220117025847_email_data.down.sql  20220117025847_email_data.up.sql  20220208120856_fix_concurrent_poll.down.sql  20220208120856_fix_concurrent_poll.up.sql  20220713122907_fix-clear_all-keep-nil-message.up.sql  20220810141100_result_created_at.down.sql  20220810141100_result_created_at.up.sql  20231227103745_init.sql  20240310044000_add_users.up.sql  20240929230957_v1_worker_results.down.sql  20240929230957_v1_worker_results.up.sql  README.md
backend/scripts/: bench_throughput.lua  bench_throughput.sh  debian11.sh
backend/src/: check.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  sentry_util.rs  throttle.rs
backend/src/http/: error.rs  mod.rs
backend/src/http/bulk/: error.rs  get.rs  mod.rs  post.rs
backend/src/http/bulk/results/: mod.rs
backend/src/http/check_email/: post.rs
backend/src/http/v0/: mod.rs
backend/src/http/v0/bulk/: db.rs  get.rs  mod.rs  post.rs  task.rs
backend/src/http/v0/bulk/results/: csv_helper.rs  mod.rs
backend/src/http/v0/check_email/: backwardcompat.rs  mod.rs  post.rs
backend/src/http/v1/: auth.rs  mod.rs
backend/src/http/v1/bulk/: error.rs  get_progress.rs  get_summary.rs  mod.rs  post.rs  task.rs
backend/src/http/v1/bulk/get_results/: csv_helper.rs  mod.rs
backend/src/http/v1/check_email/: mod.rs  post.rs
backend/src/http/version/: get.rs
backend/src/routes/: mod.rs
backend/src/routes/bulk/: db.rs  error.rs  get.rs  mod.rs  post.rs  results.rs  task.rs
backend/src/routes/bulk/results/: csv.rs  csv_helper.rs  mod.rs
backend/src/routes/check_email/: mod.rs  post.rs
backend/src/routes/version/: get.rs  mod.rs
backend/src/storage/: commercial_license_trial.rs  error.rs  mod.rs  postgres.rs
backend/src/worker/: check_email.rs  consume.rs  db.rs  do_work.rs  mod.rs  preprocess.rs  response.rs  single_shot.rs  task.rs  worker.rs
backend/tests/: README.md  check_email.rs
check_if_email_exists/: Cargo.toml
check_if_email_exists/src/: lib.rs  smtp.rs
cli/: Cargo.toml  README.md
cli/src/: cli.yml  http.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  get_similar_mail_provider.rs  gravatar.rs  haveibeenpwned.rs  lib.rs  misc.rs  mx.rs  normalize.rs  rules.json  rules.rs  smtp.rs  syntax.rs
core/src/misc/: b2c.txt  gravatar.rs  mod.rs  roles.txt
core/src/mx/: mod.rs
core/src/smtp/: connect.rs  error.rs  gmail.rs  headless.rs  hotmail.rs  http_api.rs  mod.rs  parser.rs  smtp.rs  verif_method.rs  yahoo.rs
core/src/smtp/microsoft/: hotmail.rs  mod.rs
core/src/smtp/outlook/: headless.rs  hotmail.rs  microsoft365.rs  mod.rs
core/src/smtp/yahoo/: api.rs  headless.rs  mod.rs
core/src/syntax/: mod.rs
core/src/util/: constants.rs  email_input.rs  input.rs  input_output.rs  mod.rs  roles.json  sentry.rs  sentry_util.rs  ser_with_display.rs
script/: Cargo.toml  README.md
script/src/: main.rs
serverless/: Cargo.toml  README.md  payload.json
serverless/src/: main.rs
sqs/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  backend_config.toml  main.tf
sqs/src/: main.rs
test_suite/: Cargo.toml
test_suite/src/: lib.rs
test_suite/src/fixtures/: foo.json  foo@bar.baz.json  foo@bar.json  someone@gmail.com.json  someone@yahoo.com.json  yahoo@yahoo.com.json
worker/: .env  .env.example  Cargo.toml  README.md  docker.sh  worker_config.toml
worker/migrations/: 20240929230957_init.sql
worker/src/: check_email.rs  config.rs  db.rs  lib.rs  main.rs  sentry_util.rs  task.rs  worker.rs
(+73 files in other folders)
