[package]
name = "check-if-email-exists-cli"
version = "0.8.29"
default-run = "check_if_email_exists"
edition = "2018"
description = "Check if an email address exists without sending any email."
authors = ["Amaury <amaurym10@protonmail.com>"]
license = "AGPL-3.0"
publish = false

[[bin]]
name = "check_if_email_exists"
path = "src/main.rs"

[dependencies]
check-if-email-exists = { path = "./core" }
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
once_cell = "1.11.0"
openssl = { version = "0.10.40", features = ["vendored"] }
serde = "1.0.137"
serde_json = "1.0.81"

[dependencies.hyper]
version = "0.14.18"
features = ["full"]

[dependencies.tokio]
version = "1.16.1"
features = ["macros", "net", "io-util", "rt-multi-thread"]

[profile.release]
lto = true

[workspace]
members = [
	"core",
	"test_suite"
]
