[package]
name = "reacher_backend"
version = "0.7.0"
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
async-smtp = "0.6"
check-if-email-exists = { path = "../core", features = ["headless", "sentry"] }
csv = "1.3.0"
dotenv = "0.15.0"
openssl = { version = "0.10.64", features = ["vendored"] }
sentry = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
sqlxmq = "0.5"
tokio = { version = "1.40", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10"
warp = "0.3"
