[package]
name = "reacher_backend"
version = "0.10.0"
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
anyhow = "1.0"
async-smtp = { version = "0.9.1", features = ["runtime-tokio"] }
check-if-email-exists = { path = "../core", features = ["sentry"] }
config = "0.14"
csv = "1.3.0"
dotenv = "0.15.0"
futures = { version = "0.3.30", optional = true }
lapin = { version = "2.3.1", optional = true }
tokio-executor-trait = { version = "2.1.1", optional = true }
tokio-reactor-trait = { version = "1.1.0", optional = true }
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["json", "socks"], optional = true }
sentry = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }
sqlxmq = "0.5"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10"
warp = "0.3"

[features]
worker = [
    "futures",
    "lapin",
    "tokio-executor-trait",
    "tokio-reactor-trait",
    "reqwest",
]
