[package]
name = "check-if-email-exists-cli"
version = "0.5.0"
default-run = "check_if_email_exists"
edition = "2018"
publish = false

[[bin]]
name = "check_if_email_exists"
path = "src/main.rs"

[dependencies]
check-if-email-exists = { path = "../core" }
clap = { version = "2.32", features = ["yaml"] }
env_logger = "0.7"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
