[package]
name = "check-if-email-exists-cli"
version = "0.9.1"
default-run = "check_if_email_exists"
edition = "2018"
description = "Check if an email address exists without sending any email."
authors = ["Amaury <amaury@reacher.email>"]
license = "AGPL-3.0"
publish = false

[[bin]]
name = "check_if_email_exists"
path = "src/main.rs"

[dependencies]
check-if-email-exists = { path = "../core", features = ["headless"] }
clap = { version = "3.2", features = ["derive", "env"] }
env_logger = "0.10"
once_cell = "1.17"
openssl = { version = "0.10", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"

[dependencies.tokio]
version = "1.26.0"
features = ["macros", "net", "io-util", "rt-multi-thread"]

[profile.release]
lto = true
