[package]
name = "check-if-email-exists"
version = "0.9.1"
authors = ["Amaury <amaury@reacher.email>"]
categories = ["email"]
description = "Check if an email address exists without sending any email"
documentation = "http://docs.rs/check-if-email-exists"
edition = "2018"
keywords = ["email", "smtp", "mx", "verification"]
license = "AGPL-3.0"
publish = true
readme = "../README.md"
repository = "https://github.com/reacherhq/check-if-email-exists"

[dependencies]
async-native-tls = { version = "0.4", default-features = false }
async-recursion = "1.0.5"
async-smtp = { version = "0.6.0", features = ["socks5"] }
chrono = "=0.4.31"
fantoccini = { version = "0.19.3", optional = true }
futures = { version = "0.3.30", optional = true }
fast-socks5 = "0.9.2"
hickory-proto = "0.24.0"
hickory-resolver = "0.24.0"
levenshtein = "1.0.5"
log = "0.4.20"
mailchecker = "6.0.1"
md5 = "0.7.0"
once_cell = "1.19.0"
pwned = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "socks"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
tokio = { version = "1.35.1" }

[features]
headless = ["fantoccini", "futures"]
