[package]
name = "check-if-email-exists"
version = "0.10.0"
authors = ["Amaury <amaury@reacher.email>"]
categories = ["email"]
description = "Check if an email address exists without sending any email"
documentation = "http://docs.rs/check-if-email-exists"
edition = "2018"
keywords = ["email", "smtp", "mx", "verification"]
license = "AGPL-3.0"
publish = true
readme = "../README.md"
repository = "https://github.com/reacherhq/check-if-email-exists"

[dependencies]
async-native-tls = { version = "0.4", default-features = false }
async-recursion = "1.0.5"
async-smtp = { version = "0.6.0", features = ["socks5"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.14"
derive_builder = "0.20"
fantoccini = { version = "0.21.2" }
futures = { version = "0.3.30" }
fast-socks5 = "0.9.2"
hickory-proto = "0.24.0"
hickory-resolver = "0.24.0"
levenshtein = "1.0.5"
log = "0.4.22"
mailchecker = "6.0.11"
md5 = "0.7.0"
once_cell = "1.19.0"
pwned = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "socks"] }
sentry = { version = "0.23", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.40.0" }
