[package]
name = "check_if_email_exists_serverless"
version = "0.3.2"
authors = ["Amaury Martiny <amaury.martiny@protonmail.com>"]
description = "Check if an email address exists without sending any email"
edition = "2018"
publish = false

[dependencies]
check_if_email_exists_core = { path = "../core" }
lambda_http = "0.1"
lambda_runtime = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
