[package]
name = "check_if_email_exists_test_suite"
version = "0.3.2"
authors = ["Amaury Martiny <amaury.martiny@protonmail.com>"]
description = "Check if an email address exists without sending any email"
edition = "2018"
publish = false

[dependencies]
check_if_email_exists_core = { path = "../core" }
serde = "1.0"
serde_json = "1.0"
