[package]
name = "reacher_worker"
version = "0.1.0"
edition = "2018"
description = "RabbitMQ worker for Reacher"
authors = ["Amaury <amaury@reacher.email>"]
license = "AGPL-3.0"
publish = false


[dependencies]
async-smtp = "0.6"
async-global-executor = "2.4.0"
check-if-email-exists = { path = "../core", features = ["headless"] }
futures-lite = "2.1.0"
lapin = "2.3.1"
reqwest = { version = "0.11.22", features = ["json"] }
sentry = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
